--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "vite build && aws s3 --profile heythisischris sync --delete ./build s3://calcbot-web --exclude \"*.js\" && aws s3 --profile heythisischris sync --delete ./build s3://calcbot-web --include \"*.js\" --content-type \"application/javascript\" && aws --profile heythisischris cloudfront create-invalidation --distribution-id E3IBWVVWQUABSC --paths \"/*\" > /dev/null",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -12,8 +12,8 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -29,6 +29,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-static": "^1.0.0"
+		"@sveltejs/adapter-static": "^1.0.0",
+		"mathjs": "^11.5.0"
 	}
 }
