--- a/package.json
+++ b/package.json
@@ -1,35 +1,27 @@
 {
-	"name": "calcbot-web",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build && aws s3 --profile heythisischris sync --delete ./build s3://calcbot-web --exclude \"*.js\" && aws s3 --profile heythisischris sync --delete ./build s3://calcbot-web --include \"*.js\" --content-type \"application/javascript\" && aws --profile heythisischris cloudfront create-invalidation --distribution-id E3IBWVVWQUABSC --paths \"/*\" > /dev/null",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0-next.91",
-		"@sveltejs/kit": "^1.0.0-next.589",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
-	},
-	"type": "module",
-	"dependencies": {
-		"@sveltejs/adapter-static": "^1.0.0",
+  "name": "calcbot-web",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build && aws s3 --profile heythisischris sync --delete ./build s3://calcbot-web --exclude \"*.js\" && aws s3 --profile heythisischris sync --delete ./build s3://calcbot-web --include \"*.js\" --content-type \"application/javascript\" && aws --profile heythisischris cloudfront create-invalidation --distribution-id E3IBWVVWQUABSC --paths \"/*\" > /dev/null",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+    "tauri": "tauri"
+  },
+  "dependencies": {
+    "@tauri-apps/api": "^1.2.0"
+  },
+  "devDependencies": {
+    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-static": "next",
+    "svelte": "^3.54.0",
+    "svelte-check": "^3.0.0",
+    "@tauri-apps/cli": "^1.2.2",
+    "typescript": "^4.8.4",
+    "vite": "^4.0.0",
 		"mathjs": "^11.5.0"
-	}
+  }
 }
